<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_preferences_title">Alert preferences</string>
    <string name="alert_reminder_dialog_title">A reminder sound will play at regular volume</string>
    <string name="alert_reminder_interval_in_min_default">0</string>
    <string name="alert_reminder_interval_summary" />
    <string name="alert_reminder_interval_title">Alert reminder</string>
    <string name="alerts_header_summary" />
    <string name="app_label">Wireless emergency alerts</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">OK</string>
    <string name="cb_list_activity_title">Emergency alert history</string>
    <string name="cb_other_message_identifiers">Broadcast messages</string>
    <string name="cell_broadcast_settings_not_available">Wireless emergency alert settings are not available for this user</string>
    <string name="cmas_amber_alert">Child abduction (Amber alert)</string>
    <string name="cmas_category_cbrne">Chemical/Biological/Nuclear/Explosive</string>
    <string name="cmas_category_env">Environmental</string>
    <string name="cmas_category_fire">Fire</string>
    <string name="cmas_category_geo">Geophysical</string>
    <string name="cmas_category_heading">Alert Category:</string>
    <string name="cmas_category_health">Health</string>
    <string name="cmas_category_infra">Infrastructure</string>
    <string name="cmas_category_met">Meteorological</string>
    <string name="cmas_category_other">Other</string>
    <string name="cmas_category_rescue">Rescue</string>
    <string name="cmas_category_safety">Safety</string>
    <string name="cmas_category_security">Security</string>
    <string name="cmas_category_transport">Transportation</string>
    <string name="cmas_certainty_heading">Certainty:</string>
    <string name="cmas_certainty_likely">Likely</string>
    <string name="cmas_certainty_observed">Observed</string>
    <string name="cmas_exercise_alert">Emergency alert (exercise)</string>
    <string name="cmas_extreme_alert">Emergency alert: Extreme</string>
    <string name="cmas_extreme_immediate_likely_alert">Emergency alert: Extreme</string>
    <string name="cmas_extreme_immediate_observed_alert">Emergency alert: Extreme</string>
    <string name="cmas_operator_defined_alert">Emergency alert (operator)</string>
    <string name="cmas_opt_out_button_no">No</string>
    <string name="cmas_opt_out_button_yes">Yes</string>
    <string name="cmas_opt_out_dialog_text">You are currently receiving wireless emergency alerts. Would you like to continue receiving wireless emergency alerts?</string>
    <string name="cmas_presidential_level_alert">Presidential alert</string>
    <string name="cmas_required_monthly_test">Required Monthly Test</string>
    <string name="cmas_response_assess">Assess</string>
    <string name="cmas_response_avoid">Avoid</string>
    <string name="cmas_response_evacuate">Evacuate</string>
    <string name="cmas_response_execute">Execute</string>
    <string name="cmas_response_heading">Response Type:</string>
    <string name="cmas_response_monitor">Monitor</string>
    <string name="cmas_response_none">None</string>
    <string name="cmas_response_prepare">Prepare</string>
    <string name="cmas_response_shelter">Shelter</string>
    <string name="cmas_severe_alert">Emergency alert: Severe</string>
    <string name="cmas_severity_extreme">Extreme</string>
    <string name="cmas_severity_heading">Severity:</string>
    <string name="cmas_severity_severe">Severe</string>
    <string name="cmas_urgency_expected">Expected</string>
    <string name="cmas_urgency_heading">Urgency:</string>
    <string name="cmas_urgency_immediate">Immediate</string>
    <string name="confirm_delete_all_broadcasts">Delete all received broadcast messages?</string>
    <string name="confirm_delete_broadcast">Delete this broadcast?</string>
    <string name="copy">Copy</string>
    <string name="data_coding_scheme">Data coding scheme:</string>
    <string name="delivery_time_heading">Received:</string>
    <string name="emergency_alert">Emergency alert</string>
    <string name="emergency_alert_history_title">Emergency alert history</string>
    <string name="emergency_alert_second_language_code" />
    <string name="emergency_alert_settings_title_watches">Wireless emergency alerts</string>
    <string name="emergency_alerts_title">Alerts</string>
    <string name="enable_alert_message_summary">Warn about imminent safety threats</string>
    <string name="enable_alert_message_title">Alert messages</string>
    <string name="enable_alert_speech_summary">Use text-to-speech to speak wireless emergency alert messages</string>
    <string name="enable_alert_speech_title">Speak alert message</string>
    <string name="enable_alert_vibrate_title">Vibration</string>
    <string name="enable_alerts_master_toggle_summary">Receive wireless emergency alert notifications</string>
    <string name="enable_alerts_master_toggle_title">Allow alerts</string>
    <string name="enable_area_update_info_alerts_summary">Show update information in SIM status</string>
    <string name="enable_area_update_info_alerts_title">Area update broadcasts</string>
    <string name="enable_cmas_amber_alerts_summary">Child abduction emergency bulletins</string>
    <string name="enable_cmas_amber_alerts_title">AMBER alerts</string>
    <string name="enable_cmas_extreme_threat_alerts_summary">Extreme threats to life and property</string>
    <string name="enable_cmas_extreme_threat_alerts_title">Extreme threats</string>
    <string name="enable_cmas_presidential_alerts_summary">National warning messages issued by the President. Can\'t be turned off.</string>
    <string name="enable_cmas_presidential_alerts_title">Presidential alerts</string>
    <string name="enable_cmas_severe_threat_alerts_summary">Severe threats to life and property</string>
    <string name="enable_cmas_severe_threat_alerts_title">Severe threats</string>
    <string name="enable_cmas_test_alerts_summary">Receive carrier tests and monthly tests from the safety alert system</string>
    <string name="enable_cmas_test_alerts_title">Test alerts</string>
    <string name="enable_emergency_alerts_message_summary">Warn about life-threatening events</string>
    <string name="enable_emergency_alerts_message_title">Emergency alerts</string>
    <string name="enable_etws_test_alerts_summary">Test broadcasts for Earthquake Tsunami Warning System</string>
    <string name="enable_etws_test_alerts_title">ETWS test broadcasts</string>
    <string name="enable_public_safety_messages_summary">Recommended actions that can save lives or property</string>
    <string name="enable_public_safety_messages_title">Public safety messages</string>
    <string name="enable_state_local_test_alerts_summary">Receive test messages from state and local authorities</string>
    <string name="enable_state_local_test_alerts_title">State and local tests</string>
    <string name="etws_earthquake_and_tsunami_warning">Earthquake and tsunami warning</string>
    <string name="etws_earthquake_warning">Earthquake warning</string>
    <string name="etws_other_emergency_type">Emergency warning</string>
    <string name="etws_test_message">ETWS test message</string>
    <string name="etws_tsunami_warning">Tsunami warning</string>
    <string name="expand_button_title">Advanced</string>
    <string name="link_method">smart_linkify</string>
    <string name="location_check_time">Location check time:</string>
    <string name="maximum_waiting_time">Maximum waiting time:</string>
    <string name="menu_delete">Delete broadcast</string>
    <string name="menu_delete_all">Delete broadcasts</string>
    <string name="menu_view_details">View details</string>
    <string name="message_content">Message content:</string>
    <string name="message_coordinates">Coordinates:</string>
    <string name="message_copied">Message copied</string>
    <string name="message_displayed">Message displayed:</string>
    <string name="message_identifier">Identifier:</string>
    <string name="message_options">Message options</string>
    <string name="message_serial_number">Serial number:</string>
    <string name="no_cell_broadcasts">No previous alerts</string>
    <string name="not_set">Not set</string>
    <string name="notification_channel_broadcast_messages">Broadcast messages</string>
    <string name="notification_channel_broadcast_messages_in_voicecall">Emergency alerts in voice call</string>
    <string name="notification_channel_emergency_alerts">Emergency alerts</string>
    <string name="notification_multiple">%s unread alerts.</string>
    <string name="notification_multiple_title">New alerts</string>
    <string name="override_dnd_summary">Ignore Do Not Disturb &amp; other volume settings</string>
    <string name="override_dnd_title">Always alert at full volume</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="public_safety_message">Public safety message</string>
    <string name="pws_other_message_identifiers">@string/emergency_alert</string>
    <string name="receive_cmas_in_second_language_summary" />
    <string name="receive_cmas_in_second_language_title" />
    <string name="search_menu_title">Search</string>
    <string name="seconds">seconds</string>
    <string name="show_all_messages">Show all messages</string>
    <string name="show_cmas_opt_out_summary">Show an opt-out dialog after displaying the first alert (other than Presidential Alert).</string>
    <string name="show_cmas_opt_out_title">Show opt-out dialog</string>
    <string name="show_regular_messages">Show regular messages</string>
    <string name="sms_cb_sender_name_default">Wireless emergency alerts</string>
    <string name="sms_cb_sender_name_emergency">@string/sms_cb_sender_name_default</string>
    <string name="sms_cb_sender_name_presidential">@string/sms_cb_sender_name_default</string>
    <string name="sms_cb_sender_name_public_safety">Informational notification</string>
    <string name="sms_cb_settings">Wireless emergency alerts</string>
</resources>